--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-number-format": "^4.4.1",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0"
